# pantone

./: .gitignore  README.md  install_raspbian.sh  pyproject.toml  settings.gradle
app/: build.gradle
app/src/androidTest/java/nu/nuru/hellogravity/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/nu/nuru/hellogravity/: Client.kt  MainActivity.kt  MyApplication.kt  SensorData.kt  SensorService.kt  SettingsActivity.kt  TcpClient.kt  ToColor.kt  UserInterface.kt  Utilities.kt
app/src/main/java/nu/nuru/hellogravity/lights/: LightsBluetooth.kt  LightsInterface.kt  LightsOsc.kt
app/src/main/java/nu/nuru/hellogravity/ui/theme/: Color.kt  Shape.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: settings_preferences.xml
app/src/test/java/nu/nuru/hellogravity/: ExampleUnitTest.kt
arduino/m5stack_core2/: m5stack_core2.ino  wifi_credentials.h.example
bak/: README.md
gradle/wrapper/: gradle-wrapper.properties
py/: .gitignore  algos.py  fake_client.py  index.html  netutils.py  olad.py  requirements.txt  server.py  server2.py  test_osc.py
py/static/: favicon.js  index.html  logs.js  main.js  network.js  plot.js  scale.js  state.js  types.js
static/: README.md
static/js/: hue.js  index.html  index.js  utils.js
static/js/components/: html.js  lamps.js  textfield.js
static/ts/: package-lock.json  package.json  tsconfig.json
static/ts/public/: index.html  index.js  index.js.map
static/ts/src/: app.ts
static/ts/src/public/: index.ts
