[project]
name = "pantone"
version = "0.2.0"
description = "Drives parcans with colors derived from motion sensors."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.15",
    "netifaces>=0.11.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.8",
]

[tool.ruff]
indent-width = 2

[tool.ruff.format]
indent-style = "space"
quote-style = "single"
